fix default tabs and icons alignment

--- a/src/components/activities/patientDetailsActivity/styles.scss
+++ b/src/components/activities/patientDetailsActivity/styles.scss
@@ -306,11 +306,6 @@
     background-color: lighten($c-gray, 10);
   }
 
-  &.align__element{
-    display: "flex";
-    align-items: "center";
-  }
-
 }
 
   
